# AVSS

./: .gitignore  .pre-commit-config.yaml  README.md  calc_metrics.py  demo.ipynb  inference.py  pyproject.toml  requirements.txt  train.py
scripts/: download_gdrive.py  tests.py
src/configs/: baseline.yaml  dprnn.yaml  inference.yaml  rtfs_net-e.yaml  rtfs_net-ec.yaml  rtfs_net.yaml
src/configs/dataloader/: example.yaml  inference_dataloaders.yaml  train_test_dataloaders.yaml  train_val_dataloaders.yaml
src/configs/datasets/: kaggle.yaml  onebatchtest_a.yaml  onebatchtest_av.yaml  yandex_disk.yaml  yandex_disk_big.yaml  yandex_disk_inference.yaml  yandex_disk_small.yaml
src/configs/metrics/: all_metrics.yaml  inference.yaml  rtfs_training.yaml
src/configs/model/: baseline.yaml  dprnn.yaml  rtfs-11-reuse.yaml  (+3 more)
src/datasets/: __init__.py  base_dataset.py  base_dir_audio_dataset.py  collate.py  custom_dir_audio_dataset.py  data_utils.py  kaggle_download.py  yandex_download.py
src/logger/: cometml.py  utils.py  wandb.py
src/loss/: AudioMSELoss.py  AudioSiSnr.py  AudioSiSnrRtfs.py  AudioSiSnri.py  SpectrogramLoss.py  SpectrogramMseLoss.py  __init__.py
src/metrics/: __init__.py  pesq.py  si_sdr.py  si_sdri.py  si_snr.py  si_snri.py  snr.py  stoi.py  utils.py
src/model/: __init__.py  baseline_model.py  dprnn_tasnet.py  rtfs_model.py  utils.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/transforms/: __init__.py  fft_transform.py  mel_transform.py  spec_utils.py  stft_transfrom.py  utils.py
src/utils/: init_utils.py  torch_utils.py
(+33 files in other folders)
