[project]
name = "avss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "comet-ml>=3.54.0",
    "dotenv>=0.9.9",
    "hydra-core>=1.3.2",
    "isort>=7.0.0",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "numpy==2.3.4",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pystoi>=0.4.1",
    "soundfile>=0.13.1",
    "torch==2.8.0",
    "torch-audiomentations>=0.12.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
]
